--- a/.eslintrc
+++ b/.eslintrc
@@ -5,15 +5,22 @@
     "node": true
   },
   "plugins": [
-    "@typescript-eslint"
+    "prettier",
+    "@typescript-eslint",
+    "react"
   ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "prettier"
   ],
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
     "no-unused-vars": "off",
@@ -25,6 +32,7 @@
     ],
     "@typescript-eslint/ban-ts-comment": "off",
     "no-prototype-builtins": "off",
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "prettier/prettier": "error"
   }
 }
