--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-react": "^7.33.2",
 		"obsidian": "latest",
 		"obsidian-dataview": "^0.5.64",
+		"prettier": "^3.2.5",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	},
