--- a/package.json
+++ b/package.json
@@ -25,14 +25,12 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.33.2",
 		"obsidian": "latest",
-		"obsidian-dataview": "^0.5.64",
 		"prettier": "^3.2.5",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"zustand": "^4.5.0"
+		"react-dom": "^18.2.0"
 	}
 }
