--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,17 @@
 		"importHelpers": true,
 		"isolatedModules": true,
 		"strictNullChecks": true,
-		"lib": ["DOM", "ES5", "ES6", "ES7"],
+		"lib": [
+			"DOM",
+			"ES5",
+			"ES6",
+			"ES7"
+		],
 		"jsx": "react",
 		"allowSyntheticDefaultImports": true
 	},
-	"include": ["**/*.ts", "src/view.tsz"]
+	"include": [
+		"**/*.ts",
+		"**/*.tsx",
+	]
 }
