--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
 		"importHelpers": true,
 		"isolatedModules": true,
 		"strictNullChecks": true,
+		"noImplicitOverride": true,
+		"noUncheckedIndexedAccess": true,
 		"lib": [
 			"DOM",
 			"ES5",
