--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-metafolders",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "An Obsidian plugin for multi-dimensional note navigation",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,8 +9,10 @@
 		"build-dist": "npm run build && mkdir -p dist/obsidian-metafolders && cp main.js manifest.json styles.css dist/obsidian-metafolders/",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": [
+		"obsidian"
+	],
+	"author": "Makary Sharoyan",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
