--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "obsidian-metafolders",
 	"name": "Metafolders",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Metafolders",
-	"author": "Makary Sharoyan <yasshig@gmail.com>",
+	"description": "Multidimensional note navigation",
+	"author": "Makary Sharoyan",
 	"authorUrl": "https://github.com/makary-s",
 	"isDesktopOnly": false
 }
