--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-metafolders",
+	"id": "metafolders",
 	"name": "Metafolders",
 	"version": "1.1.0",
 	"minAppVersion": "0.15.0",
