--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "obsidian-metafolders",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "An Obsidian plugin for multi-dimensional note navigation",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"build-dist": "npm run build && mkdir -p dist/obsidian-metafolders && cp main.js manifest.json styles.css dist/obsidian-metafolders/",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"publish": "bash ./scripts/publish.sh"
 	},
 	"keywords": [
 		"obsidian"
