--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.33.2",
-		"obsidian": "latest",
+		"obsidian": "^1.4.11",
 		"prettier": "^3.2.5",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
