--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react": "npm:@preact/compat@^17.1.2",
+		"react-dom": "npm:@preact/compat@^17.1.2"
 	}
 }
