--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
 		"eslint-plugin-react": "^7.33.2",
 		"obsidian": "^1.4.11",
 		"prettier": "^3.2.5",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"tslib": "^2.6.2",
+		"typescript": "^5.4.2"
 	},
 	"dependencies": {
+		"mobx": "^6.12.0",
+		"mobx-react-lite": "^4.0.6",
 		"react": "npm:@preact/compat@^17.1.2",
 		"react-dom": "npm:@preact/compat@^17.1.2"
 	}
