--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
 		"@types/node": "^16.11.6",
 		"@types/react": "^18.2.52",
 		"@types/react-dom": "^18.2.18",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
-		"eslint": "^8.56.0",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react": "^7.34.0",
 		"obsidian": "^1.4.11",
 		"prettier": "^3.2.5",
 		"tslib": "^2.6.2",
