--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "An Obsidian plugin for multi-dimensional note navigation",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node esbuild.config.mjs",
+		"dev": "concurrently npm:dev:*",
+		"dev:ts": "node esbuild.config.mjs",
+		"dev:css-types": "typed-scss-modules ./src/components/**/*.scss --nameFormat dashes --watch",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"build-dist": "npm run build && mkdir -p dist/obsidian-metafolders && cp main.js manifest.json styles.css dist/obsidian-metafolders/",
 		"publish": "bash ./scripts/publish.sh"
@@ -21,14 +23,18 @@
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"esbuild": "^0.20.2",
+		"esbuild-sass-plugin": "^3.2.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-react": "^7.34.0",
+		"eslint-plugin-react": "^7.34.1",
 		"obsidian": "^1.4.11",
+		"postcss": "^8.4.35",
+		"postcss-modules": "^6.0.0",
 		"prettier": "^3.2.5",
 		"tslib": "^2.6.2",
+		"typed-scss-modules": "^8.0.0",
 		"typescript": "^5.4.2"
 	},
 	"dependencies": {
