chore: output config

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,9 @@
-# vscode
 .vscode
 
-# Intellij
-*.iml
-.idea
-
-# npm
 node_modules
 
-# Don't include the compiled main.js file in the repo.
-# They should be uploaded to GitHub releases instead.
-main.js
-
-# Exclude sourcemaps
-*.map
-
-# obsidian
-data.json
-
-# Exclude macOS Finder (System Explorer) View States
-.DS_Store
-
-dist
-tmp
+./main.js
+./styles.css
+./data.json
 
 *.scss.d.ts
-./styles.css
-
-
