--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
 	"scripts": {
 		"dev": "concurrently npm:dev:*",
 		"dev:ts": "node esbuild.config.mjs",
-		"dev:css-types": "typed-scss-modules ./src/components/**/*.scss --nameFormat dashes --watch",
+		"dev:css-types": "typed-scss-modules \"src/**/*.scss\" --nameFormat dashes --watch --logLevel error",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"build-dist": "npm run build && mkdir -p dist/obsidian-metafolders && cp main.js manifest.json styles.css dist/obsidian-metafolders/",
-		"publish": "bash ./scripts/publish.sh"
+		"publish": "bash ./scripts/publish.sh",
+		"clean:src": "cd src && git clean -fdX",
+		"clean:all": "git clean -fdX"
 	},
 	"keywords": [
 		"obsidian"
@@ -23,6 +25,8 @@
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"builtin-modules": "3.3.0",
+		"concurrently": "^8.2.2",
+		"dotenv": "^16.4.5",
 		"esbuild": "^0.20.2",
 		"esbuild-sass-plugin": "^3.2.0",
 		"eslint": "^8.57.0",
